<resources>
    <string name="app_name">Android Labs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">Click Here</string>
    <string name="CheckText">Check this out</string>
    <string name="SwitchText">Switch on/off</string>
    <string name="LabTwoText">Look at my GUI!</string>
    <string name="EditText">Type here</string>
    <string name="toast_message">Here is more information</string>
    <string name="snack_message">you checked a box</string>
    <string name="name">Your name:</string>
    <string name="email">Your email:</string>
    <string name="l3name">Enter your name</string>
    <string name="l3email">Enter your email</string>
    <string name="picture">Your picture:</string>
    <string name="pictureButton">Click the above button to take a picture</string>
</resources>
